force-app/main/default/src/objects/MC_Journey_Data_MVN__c/MC_Journey_Data_MVN__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains MC journey data.</description>
    <label>MC Journey Data</label>
</CustomObject>