force-app/main/default/src/objects/MC_Journey_Data_MVN__c/fields/BCC_Caregiver_Journey_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>BCC_Caregiver_Journey_ID_MVN__c</fullName>
    <description>Journey ID for the BCC Caregiver journey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BCC Caregiver Journey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>