force-app/main/default/src/objects/MC_Journey_Data_MVN__c/fields/BCC_Qualified_Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>BCC_Qualified_Journey_ID__c</fullName>
    <description>Journey ID for the qualified BCC journey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BCC Qualified Journey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>