force-app/main/default/src/objects/MC_Journey_Data_MVN__c/fields/NSCLC_Unqualified_Journey_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>NSCLC_Unqualified_Journey_ID_MVN__c</fullName>
    <description>Journey ID for the Unqualified NSCLC journey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NSCLC Unqualified Journey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>