force-app/main/default/src/objects/MC_Journey_Data_MVN__c/fields/Qualified_Journey_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Journey_ID_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSCC Qualified Journey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>